--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -269,10 +269,6 @@ $circle-width: 156px;
   }
   #wrapper {
     margin-top: 0px;
-    //@media screen and (min-width: 1024px) and (max-width: 1223px) {
-    @media screen and (min-width: 1024px) {
-      margin-top: -35px;
-    }
   }
 }
 /* --- content header images on main 4 pages --- */
